# codeql

./: .bazelrc  MODULE.bazel  paket.dependencies
.github/workflows/: brakeman.yml  codeql.yml  ql-for-ql-build.yml  ql-for-ql-dataset_measure.yml  ruby-build.yml  ruby-dataset-measure.yml  swift.yml
cpp/autobuilder/Semmle.Autobuild.Cpp.Tests/: BUILD.bazel
csharp/: BUILD.bazel  paket.main.bzl
csharp/extractor/Semmle.Extraction/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp.Driver/: BUILD.bazel  Driver.cs
csharp/extractor/Semmle.Extraction/Extractor/: Extractor.cs
csharp/extractor/Testrunner/: BUILD.bazel  Testrunner.cs
go/extractor/cli/go-autobuilder/: go-autobuilder.go
misc/bazel/: csharp.bzl
ql/buramu/: Cargo.toml
