load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_binary",
)

codeql_csharp_binary(
    name = "Semmle.Extraction.CSharp.Driver",
    srcs = glob([
        "*.cs",
    ]),
    resources = ["@semmle_code//:git_info"],
    visibility = ["//csharp:__pkg__"],
    deps = [
        "//csharp/extractor/Semmle.Extraction.CSharp",
    ],
)
